# DPS-Coursework

./: CMakeLists.txt  README.md
Benchmarks/: DPS-Coursework-2023Benchmarks.cpp
Source/: DataGenerator.hpp  MultiWayJoinPlan.hpp  ReferencePlan.hpp  ThreeWayJoin.hpp  Utilities.hpp
Tests/: DPS-Coursework-2023Tests.cpp
